--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
 osx_image: xcode11
 language: objective-c
 
-script: xcodebuild -workspace 整理.xcworkspace -scheme TravisExample -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
+script: xcodebuild -workspace 整理.xcworkspace -scheme 整理 -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
