--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
 language: objective-c
 script:
-  - xctool -workspace 整理.xcworkspace -scheme 整理 -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
-  - xctool test -workspace 整理.xcworkspace -scheme 整理Tests -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
+  - xcodebuild -workspace 整理.xcworkspace -scheme 整理 -sdk iphonesimulator13.5 -configuration Debug
