--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,19 @@
 language: objective-c
+osx_image: xcode8
+xcode_project: Framework/整理.xcodeproj
+xcode_scheme: 整理
+
+before_install:
+- env
+- xcodebuild -version
+- xcodebuild -showsdks
+- xcpretty --version
+- xcrun instruments -w 'iPhone 7' || sleep 15
+
 script:
-  - xcodebuild -workspace 整理.xcworkspace -scheme 整理 -sdk iphonesimulator13.5 -configuration Debug
+- set -o pipefail
+- xcodebuild clean build -project "$TRAVIS_XCODE_PROJECT"  -scheme "$TRAVIS_XCODE_SCHEME" | xcpretty
+- xcodebuild test -project "$TRAVIS_XCODE_PROJECT" -scheme "$TRAVIS_XCODE_SCHEME" -destination "name=iPhone 7" -enableCodeCoverage YES | xcpretty
+
+after_success:
+- bash <(curl -s https://codecov.io/bash)
