--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: objective-c
-osx_image: xcode11
+osx_image: xcode10
 xcode_project: MixT/MixT.xcodeproj
 xcode_scheme: MixT
 
@@ -8,7 +8,7 @@ before_install:
 - xcodebuild -version
 - xcodebuild -showsdks
 - xcpretty --version
-- xcrun instruments -w 'iPhone 7' || sleep 15
+- xcrun instruments -w 'iPhone X' || sleep 15
 
 script:
 - set -o pipefail
