--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: objective-c
 osx_image: xcode11.5
 xcode_project: MixT/MixT.xcodeproj
 xcode_scheme: MixT
+xcode_destination: platform=iOS Simulator,OS=13.5,name=iPhone X
+podfile: MixT/Podfile
 
 before_install:
 - env
