--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,8 @@ xcode_destination: platform=iOS Simulator,OS=13.5,name=iPhone 11
 podfile: MixT/Podfile
 
 before_install:
-- gem install xcpretty --no-rdoc --no-ri --no-document --quiet
-- gem install cocoapods --pre --no-rdoc --no-ri --no-document --quiet
-- pod repo update
-- pod install --project-directory=Example
 - env
+- pod install
 - xcodebuild -version
 - xcodebuild -showsdks
 - xcpretty --version
