--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,9 @@ before_install:
 
 script:
 - set -o pipefail
-- xcodebuild clean build -project "MixT.xcworkspace"  -scheme "MixT" | xcpretty
+- xcodebuild clean build -workspace "MixT.xcworkspace"  -scheme "MixT" | xcpretty
 
-- xcodebuild test -project "MixT.xcworkspace" -scheme "MixT" -destination "$TRAVIS_XCODE_DESTINATION" -enableCodeCoverage YES | xcpretty
+- xcodebuild test -workspace "MixT.xcworkspace" -scheme "MixT" -destination "$TRAVIS_XCODE_DESTINATION" -enableCodeCoverage YES | xcpretty
 
 after_success:
 - bash <(curl -s https://codecov.io/bash)
